<resources>
    <string name="settingmodule_app_name">settingmodule</string>
    <string name="settingmodule_timer_symbol">:</string>
    <string name="settingmodule_setting_title_settings">Settings</string>
    <string name="settingmodule_setting_title_display">Display</string>
    <string name="settingmodule_setting_title_language">Language</string>
    <string name="settingmodule_setting_title_sound">Sound</string>
    <string name="settingmodule_setting_title_security">Security</string>
    <string name="settingmodule_setting_title_conectivity">Connectivity</string>
    <string name="settingmodule_setting_title_hood_options">Hood Options</string>
    <string name="settingmodule_setting_title_power_limit">Power Limit</string>
    <string name="settingmodule_setting_title_default_settings">Default Settings</string>
    <string name="settingmodule_setting_title_date_and_time">Date &amp; Time</string>
    <string name="settingmodule_setting_title_information">Information</string>
    <string name="settingmodule_setting_title_energy_settings">Energy Settings</string>
    <string name="settingmodule_setting_title_test_cookware">Test Cookware</string>
    <string name="settingmodule_fragment_setting_display_title_brightness">Brightness</string>
    <string name="settingmodule_fragment_setting_display_title_wallpaper">Wallpaper</string>
    <string name="settingmodule_fragment_setting_sound_title_sound">Sound</string>
    <string name="settingmodule_fragment_setting_sound_title_intensity">Intensity</string>
    <string name="settingmodule_fragment_setting_sound_title_sound_mode">Sound Mode</string>
    <string name="settingmodule_fragment_setting_sound_mode_mode_one">Mode 1</string>
    <string name="settingmodule_fragment_setting_sound_title_click_sound">Click Sound</string>
    <string name="settingmodule_fragment_setting_language_warning_message_unavailable">This Language is currently unavailable</string>
    <string name="settingmodule_fragment_setting_hood_options_title_hood_level">Hood Level</string>
    <string name="settingmodule_fragment_setting_hood_options_title_manual">Manual</string>
    <string name="settingmodule_fragment_setting_hood_options_title_automatic">Automatic</string>
    <string name="settingmodule_fragment_setting_hood_options_title_low">Low</string>
    <string name="settingmodule_fragment_setting_hood_options_title_medium">Medium</string>
    <string name="settingmodule_fragment_setting_hood_options_title_high">High</string>
    <string name="settingmodule_fragment_setting_hood_options_title_stablish_connection">Hood connectivity</string>
    <string name="settingmodule_fragment_setting_hood_options_title_auto_mode">Auto Mode</string>
    <string name="settingmodule_fragment_setting_hood_options_title_mode_intense">Intense Mode</string>
    <string name="settingmodule_fragment_setting_hood_options_title_mode_ecologic">ECO Mode</string>
    <string name="settingmodule_fragment_setting_hood_options_content_dialog">Enable connectivity of the hood according to hood instructions manual.\nConfirm hob and hood are connected.</string>
    <string name="settingmodule_fragment_setting_default_config_btn_restore">Restore to default settings.</string>
    <string name="settingmodule_fragment_setting_default_config_message_restore_question">Are you sure to return factory settings?</string>
    <string name="settingmodule_fragment_setting_default_config_message_restore_no">NO</string>
    <string name="settingmodule_fragment_setting_default_config_message_restore_yes">YES</string>
    <string name="settingmodule_fragment_setting_default_config_message_setting_successful">Default settings restored successfully.</string>
    <string name="settingmodule_fragment_power_limit_title_use_power_limit">Use power limit</string>
    <string name="settingmodule_fragment_power_limit_title_2800">2800W-12A</string>
    <string name="settingmodule_fragment_power_limit_title_3300">3300W-14A</string>
    <string name="settingmodule_fragment_power_limit_title_4500">4500W-20A</string>
    <string name="settingmodule_fragment_power_limit_title_5700">5700W-25A</string>
    <string name="settingmodule_fragment_setting_security_title_screen_lock">Lock Screen</string>
    <string name="settingmodule_fragment_setting_security_title_pin">PIN</string>
    <string name="settingmodule_fragment_setting_security_title_pattern">Pattern</string>
    <string name="settingmodule_fragment_setting_security_title_press_2_seconds">Press 2 seconds</string>
    <string name="settingmodule_fragment_setting_security_modify_pin_title_choose_your_pin">Choose your PIN</string>
    <string name="settingmodule_fragment_setting_security_modify_pin_title_confirm_your_pin">Confirm your PIN</string>
    <string name="settingmodule_fragment_setting_security_modify_pin_title_confirm_lock_screen">Confirm Lock Screen</string>
    <string name="settingmodule_fragment_setting_security_modify_pin_title_set_lock_screen">Set Lock Screen</string>
    <string name="settingmodule_fragment_setting_security_modify_pattern_title_set_lock_screen">Set Lock Screen</string>
    <string name="settingmodule_fragment_setting_security_modify_pattern_title_confirm_lock_screen">Confirm Lock Screen</string>
    <string name="settingmodule_fragment_setting_security_modify_pattern_title_choose_your_pattern">Choose your Pattern</string>
    <string name="settingmodule_fragment_connectivity_setting_title_bluetooth">Bluetooth devices.</string>
    <string name="settingmodule_fragment_connectivity_setting_title_make_visible">Make visible for unpaired devices</string>
    <string name="settingmodule_fragment_connectivity_setting_title_name">Name</string>
    <string name="settingmodule_fragment_connectivity_setting_title_paried_devices">Paired devices</string>
    <string name="settingmodule_fragment_connectivity_setting_temperature_sensor">Temperature sensor</string>
    <string name="settingmodule_fragment_connectivity_setting_smart_phone">Smartphone/Tablet</string>
    <string name="settingmodule_fragment_date_time_setting_title_set_date">Set date</string>
    <string name="settingmodule_fragment_date_time_setting_title_set_time">Set time</string>
    <string name="settingmodule_fragment_date_time_setting_title_24_format">Use 24-hour format</string>
    <string name="settingmodule_fragment_date_time_setting_title_alarm_settings">Alarm Settings</string>
    <string name="settingmodule_fragment_information_setting_title_instruction_manual">Instruction Manual</string>
    <string name="settingmodule_fragment_information_setting_title_key_to_icons">Key to Icons</string>
    <string name="settingmodule_fragment_information_setting_title_model">Model</string>
    <string name="settingmodule_fragment_information_setting_title_software_version">Software Version</string>
    <string name="settingmodule_fragment_information_setting_title_system_version">System Version</string>
    <string name="settingmodule_fragment_information_setting_title_demo_mode">Demo Mode</string>
    <string name="settingmodule_fragment_information_setting_title_updates">Updates</string>
    <string name="settingmodule_fragment_information_setting_title_logo">Logo</string>
    <string name="settingmodule_fragment_information_setting_title_debug_mode">Debug Mode</string>
    <string name="settingmodule_fragment_information_key_to_icon_lock">Lock</string>
    <string name="settingmodule_fragment_information_key_to_icon_close_timer">Close timer</string>
    <string name="settingmodule_fragment_information_key_to_icon_information">Information</string>
    <string name="settingmodule_fragment_information_key_to_icon_pause">Pause</string>
    <string name="settingmodule_fragment_information_key_to_icon_close">Close</string>
    <string name="settingmodule_fragment_information_key_to_icon_hood_options">Hood Options</string>
    <string name="settingmodule_fragment_information_key_to_icon_recipes">Recipes</string>
    <string name="settingmodule_fragment_information_key_to_icon_power">Power</string>
    <string name="settingmodule_fragment_information_key_to_icon_timer">Timer</string>
    <string name="settingmodule_fragment_information_key_to_icon_alarm">Alarm</string>
    <string name="settingmodule_fragment_information_key_to_icon_tem_sensor">Temperature sensor</string>
    <string name="settingmodule_fragment_information_key_to_icon_settings">Settings</string>
    <string name="settingmodule_fragment_information_key_to_icon_temperature">Temperature</string>
    <string name="settingmodule_fragment_test_cookware_title_start_new_test">Start a new test</string>
    <string name="settingmodule_fragment_test_cookware_title_select_the_cooking_zone">Select the cooking zone</string>
    <string name="settingmodule_fragment_test_cookware_conten_place_the_cookware">Place the Cookware with approximately 200 ml of water, correctly positioned, in the cooking zone that best suits the diameter of the bottom of the container.</string>
    <string name="settingmodule_fragment_test_cookware_result_is_compatible">Your Cookware is compatible with this hob</string>
    <string name="settingmodule_fragment_test_cookware_result_is_not_compatible">Your Cookware is not compatible with this hob</string>
    <string name="settingmodule_months_january">January</string>
    <string name="settingmodule_months_february">February</string>
    <string name="settingmodule_months_march">March</string>
    <string name="settingmodule_months_april">April</string>
    <string name="settingmodule_months_may">May</string>
    <string name="settingmodule_months_june">June</string>
    <string name="settingmodule_months_july">July</string>
    <string name="settingmodule_months_august">August</string>
    <string name="settingmodule_months_september">September</string>
    <string name="settingmodule_months_october">October</string>
    <string name="settingmodule_months_november">November</string>
    <string name="settingmodule_months_december">December</string>
    <string name="settingmodule_fragment_set_time_title_am">AM</string>
    <string name="settingmodule_fragment_set_time_title_pm">PM</string>
    <string name="settingmodule_fragment_set_time_title_none1"></string>
    <string name="settingmodule_fragment_set_time_title_none2"></string>
    <string name="settingmodule_fragment_alarm_setting_title_volume">Volume</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration">Alarm duration</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration">Postpone duration</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_30">30sec</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_1">1min</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_2">2min</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_3">3min</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_4">4min</string>
    <string name="settingmodule_fragment_alarm_setting_alarm_duration_options_5">5min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_1">1min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_2">2min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_5">5min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_10">10min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_15">15min</string>
    <string name="settingmodule_fragment_alarm_setting_postpone_duration_options_20">20min</string>
    <string name="settingmodule_fragment_demo_mode_title_tutorial">Tutorial</string>
    <string name="settingmodule_fragment_demo_mode_title_demo_video">Demo Video</string>
</resources>